<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/detail" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".DetailsActivity">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_details"
        android:paddingBottom="@dimen/horizontal_margin_half">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/detail_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.CardView
                    style="@style/Cards"
                    app:cardElevation="8dp"
                    app:contentPadding="16dp" >
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView

                            android:adjustViewBounds="true"

                            android:transitionName="poster"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            tools:targetApi="lollipop"

                            android:layout_width="@dimen/poster_w"
                            android:layout_height="wrap_content"
                            android:minHeight="128dp"
                            android:id="@+id/poster"
                            android:src="@drawable/placeholder"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/rate_text"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="@dimen/activity_vertical_margin"
                            android:layout_marginRight="@dimen/horizontal_margin_half"
                            android:text="@string/ratings"
                            android:textStyle="bold"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="@dimen/horizontal_margin_half"
                            android:layout_below="@id/rate_text"
                            android:text="0.0"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:id="@+id/mvote"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/mvote"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="@dimen/activity_vertical_margin"
                            android:layout_marginRight="@dimen/horizontal_margin_half"
                            android:layout_marginEnd="@dimen/horizontal_margin_half"
                            android:text="@string/release"
                            android:id="@+id/rel_text"
                            android:textStyle="bold"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/rel_text"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginRight="@dimen/horizontal_padding"
                            android:layout_marginEnd="@dimen/horizontal_padding"
                            android:layout_marginTop="@dimen/vertical_margin_half"
                            android:textSize="@dimen/text_large"
                            android:text="01-01-1970"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:id="@+id/mdate"/>
                    </RelativeLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    style="@style/Cards"
                    app:cardElevation="8dp"
                    app:contentPadding="16dp" >
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:id="@+id/plot"
                            android:textStyle="bold"
                            android:text="@string/synopsis"/>
                        <TextView
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/mplot"
                            android:text="@string/synPlaceholder"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    style="@style/Cards"
                    app:cardElevation="8dp"
                    app:contentPadding="16dp" >
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:id="@+id/trailer"
                            android:textStyle="bold"
                            android:text="@string/trailer"/>
                        <android.support.v7.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:id="@+id/trailers"
                            android:visibility="gone"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    style="@style/Cards"
                    app:cardElevation="8dp"
                    app:contentPadding="16dp" >
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:id="@+id/review"
                            android:textStyle="bold"
                            android:text="@string/review"/>
                        <android.support.v7.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:id="@+id/reviews"
                            android:visibility="gone"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>